--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: laynsleaf               # set this to your Amazon ECR repository name
   ECS_SERVICE: LaynsLeafService                 # set this to your Amazon ECS service name
   ECS_CLUSTER: LaynsLeafCluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: www.laynsleaf.com/task-definition.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: LaynsLeafTaskDefinition-revision1.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: laynsleaf-github           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
